--- a/content/posts/2019-03-01-grong.md
+++ b/content/posts/2019-03-01-grong.md
@@ -1,15 +1,13 @@
 ---
 author: Maeveycakes
-comments: false
 date: 2019-03-01 15:31:48+00:00
 excerpt: Learn how to defeat Grong as a Restoration Shaman.
 template: post
 link: http://ancestralguidance.com/grong/
 slug: grong
 title: Grong
-wordpress_id: 2090
 categories:
-- Boss Guides
+- Battle of Dazar'alor
 ---
 
 # Fight Mechanics
