--- a/content/posts/2019-03-01-opulence.md
+++ b/content/posts/2019-03-01-opulence.md
@@ -1,15 +1,13 @@
 ---
 author: Maeveycakes
-comments: false
 date: 2019-03-01 15:33:14+00:00
 excerpt: Learn how to defeat Opulence as a Restoration Shaman.
 template: post
 link: http://ancestralguidance.com/opulence/
 slug: opulence
 title: Opulence
-wordpress_id: 2094
 categories:
-- Boss Guides
+- Battle of Dazar'alor
 ---
 
 # Fight Mechanics
