--- a/content/posts/2019-06-25-changes-in-82.md
+++ b/content/posts/2019-06-25-changes-in-82.md
@@ -6,9 +6,8 @@ thumbnail: '../thumbnails/wp.png'
 slug: changes-in-82
 categories:
   - Popular
-tags:
-  - raiding
-  - comsumeables
+  - Comsumeables
+  - Raiding
 ---
 
 There is a lot of new content in 8.2, and it can be a lot to digest if you skimming through the various guides. So I’d like to cover some of the changes that are relevant to us to hopefully reduce the amount of info you may need to get through the patch.
