update image links

--- a/content/posts/2018-12-10-changes-in-8-1.md
+++ b/content/posts/2018-12-10-changes-in-8-1.md
@@ -19,7 +19,7 @@ In patch 8.1, Tides of Vengeance, [Chain Heal](https://www.wowhead.com/spell=106
 
 Azerite armor has a significant change in 8.1 upon the launch of "BFA Season 2," the addition of a new outer ring of traits.  This new outer ring contains two spec specific traits for every specialization.  This means we will be able to have two outer ring traits on each piece of azerite gear resulting in a total of 6 outer ring traits.  You are still only able to have a maximum of three points in a single trait.  With the new outer ring, you can potentially have two traits fully maxed out with 3 points each, or you can go for a large variety of upwards of 6 individual traits.  To prevent gear from being too repetitive, Blizzard is adding in a few new traits to increase diversity of character builds as well as retooling some familiar traits to be more appealing.
 
-![](http://ancestralguidance.com/wp-content/uploads/2018/11/8.1-azerite.png)
+![](../images/8.1-azerite.png)
 
 ## Azerite Trait Changes
 
