--- a/content/posts/2019-06-25-changes-in-82.md
+++ b/content/posts/2019-06-25-changes-in-82.md
@@ -2,7 +2,7 @@
 date: 2019-06-25
 title: 'Changes in 8.2'
 template: post
-thumbnail: '../thumbnails/wp.png'
+thumbnail: '../images/AGLOGOsmall.png'
 slug: changes-in-82
 categories:
   - Popular
