--- a/content/posts/2018-08-13-azerite.md
+++ b/content/posts/2018-08-13-azerite.md
@@ -10,16 +10,9 @@ categories:
 - General
 ---
 
-# Outer Ring Traits
+## Outer Ring Traits
 
-		
-									Shaman Traits
-									Zone Traits
-									Uldir Traits
-									Battle for Dazar'alor Traits
-									Warfront Traits
-									Shaman Traits
-					
+### Shaman Traits
 
 [Swelling Stream](http://bfa.wowhead.com/spell=275488/swelling-stream) - Causes [Healing Stream Totem](https://www.wowhead.com/spell=5394) (or [Cloudburst Totem](https://www.wowhead.com/spell=157153)) to cast a 3 target Lesser Chain Heal every 3 seconds the totem is alive.  These Lesser Chain Heals work exactly as the spell [Chain Heal](https://www.wowhead.com/spell=1064) with a 30% reduction on bounces, but are not augmented by [High Tide](https://www.wowhead.com/spell=157154).  The frequency of the totem casting Lesser Chain Heal does not scale with Haste.  These Lesser Chain Heals do not feed [Cloudburst Totem](https://www.wowhead.com/spell=157153).  By stacking multiples of this trait, only the healing of the Lesser Chain Heals is improved.
 
@@ -37,9 +30,7 @@ categories:
 
 [Synapse Shock](http://bfa.wowhead.com/spell=277958/synapse-shock) - Provides a stacking intellect buff after hitting enemies with [Lightning Bolt](https://www.wowhead.com/spell=403) or [Chain Lightning](https://www.wowhead.com/spell=421) stacking up to 5 times.  Each hit of [Chain Lightning](https://www.wowhead.com/spell=421) provides a stack of intellect.  Stacking multiples of this trait provides a larger intellect increase per stack.
 
-
-									Zone Traits
-					
+### Zone Traits
 
 [Swirling Sands](http://bfa.wowhead.com/spell=280429/swirling-sands) - Increases Critical Strike rating for 12 seconds.  While the buff holds, critically striking extends the duration for up to an extra 6 seconds.  Since we have so many spells that have multiple hits, this effect will almost always have an 18 second duration.  Stacking multiples of this trait adds more Critical Strike rating.
 
@@ -57,17 +48,13 @@ categories:
 
 [Tradewinds](http://bfa.wowhead.com/spell=281841/tradewinds) - Provides a Mastery increase for 15 seconds, then the buff jumps to a nearby ally granting them reduced Mastery for 8 seconds.  Stacking multiples of this trait increases the Mastery provided to you and your ally.
 
-
-									Uldir Traits
-					 
+### Uldir Traits
 
 [Archive of the Titans](http://bfa.wowhead.com/spell=280555/archive-of-the-titans) - Provides a stacking intellect increase that increases every 5 seconds up to a total of 20 stacks.  Also provides Reorigination Array while in Uldir.  Reorigionation Array increases your highest secondary stat by 75 per stack.  You can gain more stacks by killing 3 bosses in Uldir each week.  Stacking multiples of this trait provides more mainstat per stack of the Archive of the Titans buff.
 
 [Laser Matrix](http://bfa.wowhead.com/spell=280559/laser-matrix) - Provides a chance on healing spells to cause a burst of healing that splits evenly among nearby allies.  This can also proc on damage events and split damage to nearby enemies.  Also provides Reorigination Array while in Uldir.  Reorigionation Array increases your highest secondary stat by 75 per stack.  You can gain more stacks by killing 3 bosses in Uldir each week.  Stacking multiples of this trait provides more healing and damage on proc.
 
-
-									Battle for Dazar'alor Traits
-					
+### Battle for Dazar'alor Traits
 
 [Seductive Power](https://ptr.wowhead.com/spell=288749/seductive-power) - Your spells have a chance to spawn a visage of Bwonsomdi.  Collecting the visage gives intellect and stamina stacking up to 5 times.  Failing to collect a visage will cause you to lose a stack.  Multiple traits increases the intellect and stamina gained from each stack.
 
@@ -75,28 +62,19 @@ categories:
 
 [Bonded Souls](https://ptr.wowhead.com/spell=288802/bonded-souls) - Your abilities have a chance to link you to your nearest ally.  Every 5 seconds you and your ally are healed and gain a haste buff that lasts for 5 seconds.  This link lasts for 15 seconds total and can be transferred to another ally by them being the closest ally to you.  Stacking multiple traits increases the healing and haste provided to you and your nearest ally.
 
-
-									Warfront Traits
-					
+### Warfront Traits
 
 [Endless Hunger](https://www.wowhead.com/spell=287662/endless-hunger) (H) - Provides flat versatility and heals the wearer when you walk near a dead enemy.  Multiple traits adds more versatility and more healing on the proc.
 
-[Apothecary's Concoction](https://www.wowhead.com/spell=287631/apothecarys-concoctions) (H) - Causes damaging spells to sometimes leave a damage over time effect on the target.  Also causes healing spells to sometimes leave a healing over time effect on the target.  Stacking multiple traits adds more damage and healing to the respective proc. 
+[Apothecary's Concoction](https://www.wowhead.com/spell=287631/apothecarys-concoctions) (H) - Causes damaging spells to sometimes leave a damage over time effect on the target.  Also causes healing spells to sometimes leave a healing over time effect on the target.  Stacking multiple traits adds more damage and healing to the respective proc.
 
-[Ancients' Bulwark](https://www.wowhead.com/spell=287604/ancients-bulwark) (A) - Increases versatility while only standing still.  While moving you are healed for a small amount 
+[Ancients' Bulwark](https://www.wowhead.com/spell=287604/ancients-bulwark) (A) - Increases versatility while only standing still.  While moving you are healed for a small amount.
 
 [Shadow of Elune](https://www.wowhead.com/spell=287467/shadow-of-elune) (A) - Provides a chance to proc haste for 15 seconds.  If it is nighttime, you also gain 10% move speed during the duration.  Stacking multiple traits adds more haste to the proc.
 
+## Middle Ring Traits
 
-			
-
-# Middle Ring Traits
-
-		
-									Healing Traits
-									Damage Traits
-									Healing Traits
-					
+### Healing Traits
 
 [Earthlink](http://bfa.wowhead.com/spell=279926/earthlink) - Increases Intellect by a small amount that ramps up over 6 seconds, then decays over 6 seconds.  Stacking multiples of this trait increases the Intellect provided at each stack.
 
@@ -118,24 +96,15 @@ categories:
 
 [Savior](http://bfa.wowhead.com/spell=267883/savior) - Gives your spells a small chance to proc and extra heal when healing someone below 35% health. Stacking multiples of this trait increases the healing of the proc.
 
-
-									Damage Traits
-					
+### Damage Traits
 
 [Elemental Whirl](https://www.wowhead.com/spell=270667) - Gives a chance on damage events to give you a random secondary stat for 10 seconds. Stacking multiples of this trait provides more secondary stats.
 
 [Unstable Flames](https://www.wowhead.com/spell=279899) - Gives a chance to gain a stack of Critical Strike rating for 5 seconds that can stack up to 5 times.  Stacking multiples of this trait increases the Critical Strike rating provided.
 
+## Inner Ring Traits
 
-			
-
-# Inner Ring Traits
-
-		
-									Healing Utility Traits
-									Other Utility Traits
-									Healing Utility Traits
-					
+### Healing Utility Traits
 
 [Bulwark of the Masses](https://www.wowhead.com/spell=270655) - Provides an absorb shield when there are 4 or more enemies around you.  This has a 15 second internal cooldown. Stacking multiples of this trait provides a larger absorb shield.
 
@@ -153,9 +122,7 @@ categories:
 
 [Vampiric Speed](https://www.wowhead.com/spell=269239) - Heals you and provides a small speed boost for 6 sec whenever someone in your raid kills an enemy.  Stacking multiples of this trait increases the healing and speed provided.
 
-
-									Other Utility Traits
-					
+### Other Utility Traits
 
 [Gemhide](http://bfa.wowhead.com/spell=268596/gemhide) - Provides a small armor and avoidance increase when you take more than 10% of your health in a single hit. Stacking multiples of this trait provides more armor and avoidance.
 
@@ -163,24 +130,12 @@ categories:
 
 [AAT](https://ptr.wowhead.com/spell=287774/ancient-ankh-talisman) - Increases your health while [Reincarnation](https://www.wowhead.com/spell=20608/reincarnation) is off cooldown.  While at full health, [Reincarnation](https://www.wowhead.com/spell=20608/reincarnation) comes off cooldown 50% faster.
 
+## Traits to Obtain
 
-			
-
-# Traits to Obtain
-
-		
-						All traits are evaluated on their own.  Any Uldir traits are evaluated without Reorigination Array included.  This ranking is geared towards PvE with a focus on raiding.  Traits for M+ are the same as raiding if you are focused on healing, but consider going for DPS traits if you are comfortable in pushing high keys and need more DPS.					
-			
-		
-		
+All traits are evaluated on their own. Any Uldir traits are evaluated without Reorigination Array included. This ranking is geared towards PvE with a focus on raiding. Traits for M+ are the same as raiding if you are focused on healing, but consider going for DPS traits if you are comfortable in pushing high keys and need more DPS.
 
 Below is a table generated as a generalized ranking of traits in terms of intellect.  To compare Azerite pieces, add up the intellect value for each trait at the respective item level as well as the intellect on the pieces.  Whichever has the higher value is the better piece generally.  If you want to use your own logs to generate a table just like this one tailored to how you play, check out our guide on how to use our Azerite and trinket spreadsheet linked below.
 
-		
-					
-			[
-						Spreadsheet Guide
-					](https://ancestralguidance.com/spreadsheet/)
-		
+[Spreadsheet Guide](https://ancestralguidance.com/spreadsheet/)
 
 When evaluating different pieces of Azerite Armor, consider the outer row as the main power of the piece.  The middle and inner rings generally provide very small increases to your overall throughput on most encounters.  Don't be afraid to drop a middle or inner trait for a higher level Azerite piece as the all traits scale off item level.  Your first Archive of the Titans or Laser Matrix (to activate Reorigination Array) is the only mandatory trait when raiding.  Best of luck hunting optimized pieces!
