--- a/content/posts/2018-07-14-stats.md
+++ b/content/posts/2018-07-14-stats.md
@@ -10,24 +10,23 @@ categories:
 - General
 ---
 
-All of our stats provide us with a relatively equal level of performance. Crit currently performs slightly ahead of the pack, while Mastery lags slightly behind. You should gem and enchant Crit, and use the highest item level when gearing your character, adjusting with jewelry.					
-			
-		
-		
+All of our stats provide us with a relatively equal level of performance. Crit currently performs slightly ahead of the pack, while Mastery lags slightly behind. You should gem and enchant Crit, and use the highest item level when gearing your character, adjusting with jewelry.
 
 The best way to begin is by reminding everyone, as mentioned before, that ALL OF OUR STATS ARE GOOD. In fact, having more of all of the stats makes them scale better yet. This is why, in Discord, you see the Ancestors, Ascendants and other regular users recommend a balance of secondary stats. If our stats are spread better, we are granted access to larger multipliers, and thus higher potential HPS numbers.
 
 Stats scale multiplicatively with each other following this formula (calculating averages for crit):
 
-<blockquote>Direct Heals:
-> 
-> _Intellect *  Spell coefficient * (1+Effective-Mastery%) * (1+Crit%) * (1+Versatility%)_
-> 
-> Healing over Time:
-> 
-> _Intellect * Spell coefficient * __(1+Effective-Mastery%) * (1+Crit%) * (1+Versatility%)__ * (1+Haste%)_
-> 
-> </blockquote>
+<div class="filename">Direct Heals</div>
+
+```js
+Intellect * Spell coefficient * (1+Effective-Mastery%) * (1+Crit%) * (1+Versatility%)
+```
+
+<div class="filename">Healing over Time</div>
+
+```js
+Intellect * Spell coefficient * (1+Effective-Mastery%) * (1+Crit%) * (1+Versatility%) * (1+Haste%)
+```
 
 The biggest thing to note is that it is likely that you will never possess absolute equality regarding stats. Titan-forging and item level increases play a strong role in stat distribution. With item level increases being so strong for us, you are going to use the upgrade regardless of it messing up your beautiful secondary distribution that you worked so hard for.
 
@@ -41,61 +40,31 @@ Lastly, it’s important for you to understand that stat percentages and even op
 
 Stats are effectively smaller moving pieces in the HPS machine powered by the player. Keep this in mind as I move forward in explaining the purpose, strengths, and weaknesses of each stat.
 
-		
-			
-
 ## Critical Strike
-
-		
-		
 
 Increases throughput of all spells.  Returns some mana on direct heal crits.
 
-		
-												Advanced					
-					
-
 In what has proven to be the strongest stat for the majority of encounters, Critical Strike provides a chance for your spell casts to do double the healing, and returns some of the mana spent with Resurgence. Crit is certainly powerful, but there are considerations as we begin to acquire more of it. The first is that the amount of mana you gain from Resurgence as Crit increases is not significant by any means.  The bottom line is that Crit is a great THROUGHPUT stat which also returns mana. That is the heart of why you are taking it, you will not be going out of mana because you don’t have enough.
-
-
-			
 
 ## Haste
 
-		
-		
-
 Reduces cast speed as well as increases tick rate of healing over time abilities and totems.
 
-		
-												Advanced					
-					
-
-Haste is a hot topic. A common misconceptions about Haste is that “it makes you run out of mana faster.” 
+Haste is a hot topic. A common misconceptions about Haste is that “it makes you run out of mana faster.”
 
 Haste making you go out of mana faster is a misconception because of carelessness and poor spell selection. Haste itself increases the number of ticks gained from all HoT-based spells such as Healing Rain, Riptide, Healing Stream Totem and Healing Tide Totem. This does not mean that there are any specific breakpoints that you need to reach, just that as you gain Haste you will gain an additional partial tick of any of these spells. Additionally Haste reduces the cast time of all your spells, the amount for each spell being different based upon the base cast time for the spell, and how low the cast time already is. Keeping that in mind, it’s pretty easy to see how Haste can actually be our highest HPS stat.  Haste is quite valuable in scenarios where there are back to back damage instances that need to be healed before the next comes in. Haste helps us squeeze more casts into timed windows where an extra cast can save the raid.
 
 When using the talent Flash Flood the formula for determining cast speeds while Flash Flood is active is as follows:
 
-_cast time = base cast time * (1 – 0.2) / (haste percentage)._
+`cast time = base cast time * (1 – 0.2) / (haste percentage)`
 
 Flash Flood scales before haste making haste slightly less effective in terms of the amount of cast time it reduces off the base cast.
 
 As illustrated with Maiden above, Haste excels in encounters with constant ticking damage and short burst damage windows. The caveat here is that after you start to get too much Haste, it becomes less effective.  If heals are not effective it does not matter how many of them you cast if they hardly move a health bar.
 
-
-			
-
 ## Mastery
 
-		
-		
-
 Increases throughput based on the health of your target.  Gains more effectiveness the lower the health. Great in desperate situations, but has reverse scaling with itself.
-
-		
-												Advanced					
-					
 
 What was previously the progression goldenboy, Mastery has dropped its usefulness considerably compared to the other secondary stats. There are so many cooldowns that exist now which hinders Mastery’s usefulness.
 
@@ -103,23 +72,10 @@ Mastery shines with Cataclysm-esque damage patterns, ones that are frequent and 
 
 Having some Mastery is still advantageous on progression because as people are learning mechanics, and as such, you can capitalize on Mastery’s strengths. However, given that about 30% Mastery effectiveness is considered quite high, the amount that you keep on you should be lower than what the community seems to lead people to believe. DO NOT give into the “feelycraft” nonsense that you need 100% Mastery, as this is not something you should worry about when gearing your character.
 
-
-			
-
 ## Versatility
-
-		
-		
 
 A flat increase to all damage and healing.  Also reduces damage taken at all times.
 
-		
-												Advanced					
-					
-
 The stat that everyone seems to avoid for no reason. Versatility tends to be boring because it is quite literally a flat throughput increase and damage reduction. It’s basically Mastery’s cousin that works all the time instead of only when players are at low health. The only major drawback of this stat is that it takes more rating for a percentage. As I’ve stated before, you aren’t stacking any one stat, so this isn’t a large concern. Since Versatility gets stronger the more Intellect you have, it is quite desirable.
 
-
-		
-
-So, that’s that! Hopefully you have a better understanding of stats, when to use them, how to evaluate them, and that at the end of the day they exist to slightly augment the underlying motor that is YOUR play.
+> So, that’s that! Hopefully you have a better understanding of stats, when to use them, how to evaluate them, and that at the end of the day they exist to slightly augment the underlying motor that is YOUR play.
