--- a/content/posts/2019-03-01-grong.md
+++ b/content/posts/2019-03-01-grong.md
@@ -12,45 +12,25 @@ categories:
 
 # Fight Mechanics
 
-		
-		
-
 Grong is the second fight for Horde, and third for Alliance. Depending on Faction you'll see different names for the same abilities and they'll be listed as Horde / Alliance.
 
 This is a fight filled with constant raidwide AoE damage while also having high tank damage.  Every form of raidwide damage in this encounter is done in large chunks.  The first of which is Grong's [Ferocious Roar](https://www.wowhead.com/spell=290574/ferocious-roar).  Make sure you are standing near one other player when Grong casts [Ferocious Roar](https://www.wowhead.com/spell=290574/ferocious-roar) to not get feared.  In Mythic, the fear turns to a horrify which means Tremor Totem has no use.  Next, after each [Bestial Combo](https://www.wowhead.com/spell=282082/bestial-combo), Grong will cast [Bestial Throw](https://www.wowhead.com/spell=289292/bestial-throw) which deals raid damage that decreases with distance the throw is from the boss.  If you are targeted by the throw, run away from your raid members so they don't get hit by the impact, but more importantly run away from Grong to reduce overall raid damage.  Grong's final raid damage ability is [Reverberating Slam](https://www.wowhead.com/spell=282179/reverberating-slam) which targets a melee and does damage in a large area around that melee player.  More than likely, every melee player will be hit by this mechanic so they will need to be healed.  After the slam, a [Reverberating Echo](https://www.wowhead.com/spell=282181/reverberating-echo) will happen a few seconds later.  Do not stand in the [Reverberating Echo](https://www.wowhead.com/spell=282181/reverberating-echo).  Ranged players will be targeted by [Megatomic Seeker Missle](https://www.wowhead.com/spell=282215/megatomic-seeker-missile)s / [Voodoo Blast](https://www.wowhead.com/spell=282471/voodoo-blast)s.  Move quickly out of the fire on the ground caused by these mechanics.  Lastly, when Grong reaches full energy or when triggered by using a [Apetagonizer Core](https://www.wowhead.com/spell=285658/apetagonizer-core) / [Necrotic Core](https://www.wowhead.com/spell=286433/necrotic-core), he will cast [Tantrum](https://www.wowhead.com/spell=281936/tantrum) / [Death Knell](https://www.wowhead.com/spell=282399/death-knell).  For each 25 energy Grong has, he will deal a large amount of raid damage and leave a stack of [Shattered](https://www.wowhead.com/spell=282010/shattered) / [Death Touched](https://www.wowhead.com/spell=282415/death-touched).  This causes your raid to always be taking a small amount of damage over time for 40 seconds after each [Tantrum](https://www.wowhead.com/spell=281936/tantrum) / [Death Knell](https://www.wowhead.com/spell=282399/death-knell).  Lastly, there are adds that spawn around the room that will give Grong energy if their casts go off, and upon death spawn a [Apetagonizer Core](https://www.wowhead.com/spell=285658/apetagonizer-core) / [Necrotic Core](https://www.wowhead.com/spell=286433/necrotic-core).
 
-		
-			
-
 # Suggested Talents
 
-		
-										![](http://ancestralguidance.com/wp-content/uploads/2019/02/Champion.png)											
-		
+![Grong Talents](../images/raids/Champion.png)
 
 You will likely want to use this exact talent setup except if your guild decides they want [APT](https://www.wowhead.com/spell=207399/ancestral-protection-totem) over [EWT](https://www.wowhead.com/spell=198838/earthen-wall-totem) for extra raid health for a [Tantrum](https://www.wowhead.com/spell=281936/tantrum) / [Death Knell](https://www.wowhead.com/spell=282399/death-knell) and the potential to save a battle rez if someone were to die during [APT](https://www.wowhead.com/spell=207399/ancestral-protection-totem)'s duration.  While the damage pattern of the fight favors burst healing, [Ascendance](https://www.wowhead.com/spell=114052/ascendance) is not recommended at all since the overall healing requirement for the fight is extremely high at all times.
 
-		
-			
-
 # Notable Azerite Traits
-
-		
-		
 
 [Spouting Spirits](https://www.wowhead.com/spell=279504/spouting-spirits) and [Overflowing Shores](https://www.wowhead.com/spell=278095/overflowing-shores) are by far the best performing azerite traits on Grong.  [Overflowing Shores](https://www.wowhead.com/spell=278095/overflowing-shores) provides a nice boost to your healing as you will likely have [HR](https://www.wowhead.com/spell=73920/healing-rain) down constantly throughout the fight and [Spouting Spirits](https://www.wowhead.com/spell=279504/spouting-spirits) is incredibly strong during a high energy [Tantrum](https://www.wowhead.com/spell=281936/tantrum) / [Death Knell](https://www.wowhead.com/spell=282399/death-knell).
 
-		
-			
-
 # Healing Tips
 
-		
-		
-
-  * You will likely be using a lot of mana on high cost AoE heals throughout the encounter.  Look to use a channeled mana potion when other healers can cover for the lack of healing you will be doing.
-  * Use [Astral Shift](https://www.wowhead.com/spell=108271/astral-shift) liberally.
-  * For [Tantrums](https://www.wowhead.com/spell=281936/tantrum) / [Death Knells](https://www.wowhead.com/spell=282399/death-knell) organize raid cooldowns as follows:
-    * When Grong is at 50 energy or less, use one healing cooldown. 
-    * If Grong is at 75 energy, consider using 1-2 healing cooldowns and some sort of damage reduction cooldown. 
-    * If Grong is at 100 energy, use 2 healing cooldowns and 2-3 defensive cooldowns.
+* You will likely be using a lot of mana on high cost AoE heals throughout the encounter.  Look to use a channeled mana potion when other healers can cover for the lack of healing you will be doing.
+* Use [Astral Shift](https://www.wowhead.com/spell=108271/astral-shift) liberally.
+* For [Tantrums](https://www.wowhead.com/spell=281936/tantrum) / [Death Knells](https://www.wowhead.com/spell=282399/death-knell) organize raid cooldowns as follows:
+  * When Grong is at 50 energy or less, use one healing cooldown.
+  * If Grong is at 75 energy, consider using 1-2 healing cooldowns and some sort of damage reduction cooldown.
+  * If Grong is at 100 energy, use 2 healing cooldowns and 2-3 defensive cooldowns.
